* #8772: Fix journal entry creation in Chat for uri-list (kevix)
* #8471: Allow resuming Chat log in Write (morgs)
* #8411: Add license to activity.info (morgs)
* Remove parameter from bundlebuilder.start (morgs)
* Add update_url for software updater (morgs)

45

* Updated translations: sl, nb, el, mr, rw, ur, ne
* Fixed MANIFEST to include all translations (morgs)

44

* #7633: Close the text channel when stopping a 1-1 chat (morgs)
* #7717: Log incoming messages (morgs)
* #7692: Don't show pending messages when joining a chat (morgs)
* Updated translations: nl, te, es, mn

43

* Updated translations: zh_TW, ja

42

* #6036: Show timestamp as elapsed time instead of date (morgs)
* Updated translations: fr, mvo, pis, af, sd, pap, tpi, ar, de

41

* Updated translations: mr, de, ht, km, es, it
* #6036: Add separator after old chat history (morgs)
* #6298: Implement 1-1 private chat with non Sugar Jabber clients (morgs)

40

#5767: Use black text on light fill colors (matthias)

39

* ACK received messages (cassidy)
* Handle pending messages when setting the message handler (cassidy)

38

* Updated translations: zh_TW, de, it

37

* UI Change: Merge multiple sequential messages from same author (morgs)
* Updated translation: ar (pootle)
* #6561: Fix RTL message alignment (Arabic) (khaled)

36

* #5053: Reduce white space around boxes (morgs)
* #6621: set entry sensitive not editable (morgs)
* Add license to activity.py (morgs)
* #6743: border around gtk.entry (morgs)
* Reduce telepathy code based on improved PS channel creation API (morgs)
* Open URLs via show_object_in_journal (morgs)
* Update pippy metadata based on Pippy (morgs)
* Updated translations (pootle)

35

* #6066: Make web links copied to clipboard, pasteable in Write, Browse,
  Terminal (morgs)
* Added AUTHORS, COPYING (morgs)
* Updated translations (pootle)

34

* Updated translations: ur, bn (pootle)
* #2351: Scrolling fixed (marcopg)

33


32

* #5542: Repackaged as a Pippy application. (cscott)

31
