@@ -3,7 +3,7 @@ name = Chat
 bundle_id = org.laptop.Chat
 class = pippy_app.Chat
 icon = activity-icon
-activity_version = 45
+activity_version = 60
 mime_types = 
 show_launcher = yes
 host_version = 1
